force-app/main/default/objects/Integration_Config__mdt/Integration_Config__mdt.object-meta.xml
<CustomObject>
    <description>Stores integration configuration records that act as mappings of integration classes with their configurations so that the concrete integration classes we have can be determined at runtime rather than every developer needing to update the integration framework code to add their class manually.</description>
    <label>Integration Config</label>
    <pluralLabel>Integration Configs</pluralLabel>
</CustomObject>