force-app/main/default/objects/Integration_Config__mdt/fields/IsAuditableChk__c.field-meta.xml
<CustomField>
    <fullName>IsAuditableChk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stores the audit policy for this integration configuration</description>
    <label>Is Auditable</label>
    <type>Checkbox</type>
</CustomField>