force-app/main/default/objects/Integration_Config__mdt/fields/MaxRetriesNum__c.field-meta.xml
<CustomField>
    <fullName>MaxRetriesNum__c</fullName>
    <description>Stores the maximum number of times the integration message can be retried</description>
    <label>Max Retries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>