force-app/main/default/objects/Integration_Config__mdt/fields/MessageClassTxt__c.field-meta.xml
<CustomField>
    <fullName>MessageClassTxt__c</fullName>
    <description>The message class this record represents. Message classes receive and deal with the structure of integration messages.</description>
    <label>Message Class</label>
    <length>60</length>
    <type>Text</type>
</CustomField>