force-app/main/default/objects/Integration_Config__mdt/fields/MessageTypeTxt__c.field-meta.xml
<CustomField>
    <fullName>MessageTypeTxt__c</fullName>
    <description>Stores the type of message</description>
    <label>Message Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>