force-app/main/default/objects/Integration_Config__mdt/fields/ProcessorClassTxt__c.field-meta.xml
<CustomField>
    <fullName>ProcessorClassTxt__c</fullName>
    <description>The processor class this record represents. Processor classes perform business logic in response to integration messages.</description>
    <label>Processor Class</label>
    <length>60</length>
    <type>Text</type>
</CustomField>