force-app/main/default/objects/Integration_Config__mdt/fields/RetentionDaysNum__c.field-meta.xml
<CustomField>
    <fullName>RetentionDaysNum__c</fullName>
    <description>Stores the length of retention policy in days for this integration configuration</description>
    <label>Retention Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>